Include Fact++ JAR in repo; allow it in .gitignore; document in README